# Guiding-Breeze

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/: game.cpp  game.hpp  screen.cpp  screen.hpp
src/core/components/: test_component.hpp
src/core/systems/: system.cpp  system.hpp  test_system.hpp
src/logger/: logger.cpp  logger.hpp
